--- a/grsmu_diplom/grsmu_diplom/templates/base.html
+++ b/grsmu_diplom/grsmu_diplom/templates/base.html
@@ -23,7 +23,7 @@
 
 <div class="container position-sticky z-index-sticky top-0">
     <div class="row">
-        <div class="col-12">
+        <div class="col-md-12">
             <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                 <div class="container-fluid px-0">
                     <a class="navbar-brand" href="/">Главная</a>
