поправлен фон для мобильного. Сортировка комментариев.

--- a/grsmu_diplom/demo_site/templates/demo_site/comment_section.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/comment_section.html
@@ -26,7 +26,7 @@
         <option value="">--Категория--</option>
         <option value="?sort={{ sort_by }}&filter=all">Все</option>
         <option value="?sort={{ sort_by }}&filter=lesson">Занятия</option>
-        <option value="?sort={{ sort_by }}&filter=lecture">Лекции</option>
+        <option value="?sort={{ sort_by }}&filter=lection">Лекции</option>
         <option value="?sort={{ sort_by }}&filter=exam">Экзамен</option>
         <option value="?sort={{ sort_by }}&filter=other">Остальное</option>
         </select>
@@ -36,7 +36,7 @@
         <option value="">--Категория--</option>
         <option value="?filter=all">Все</option>
         <option value="?filter=lesson">Занятия</option>
-        <option value="?filter=lecture">Лекции</option>
+        <option value="?filter=lection">Лекции</option>
         <option value="?filter=exam">Экзамен</option>
         <option value="?filter=other">Остальное</option>
         </select>
