--- a/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
+++ b/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
@@ -16,7 +16,7 @@
     backdrop-filter: blur(100px);
     padding-top: 20px;
     border-radius: 30px;
-    padding-bottom: 1px;">
+    padding-bottom:  20px;">
   <img src="{% static '/images/grsmu-logo.png' %}" alt="Profile Picture" width="150" height="150">
   <b style="color: #f2f2f2;
   background: #be0040;
@@ -39,60 +39,31 @@
     backdrop-filter: blur(100px);
     padding-top: 20px;
     border-radius: 30px;
-    padding-bottom: 1px;">
-  <div class="row"><h1>О проекте</h1>
-    <div class="messages-row">
-      <div class="chat_window">
-                  <div class="top_menu">
-                      <div class="buttons">
-                          <div class="button close"></div>
-                          <div class="button minimize"></div>
-                          <div class="button maximize"></div>
-                      </div>
-                      <div class="title">Диалоги ГрГМУ</div>
-                  </div>
-              <ul class="messages"></ul>
-                  <div class="bottom_wrapper clearfix">
-                      <div class="message_input_wrapper">
-                          <input class="message_input" placeholder="Ваше сообщение..." />
-                      </div>
-                      <div class="send_message">
-                          <div class="icon"></div>
-                          <div class="text">Отправить</div>
-                      </div>
-                  </div>
-              </div>
-              <div class="message_template">
-                  <li class="message">
-                      <div class="avatar"></div>
-                      <div class="text_wrapper">
-                          <div class="text">
-                          </div>
-                      </div>
-                  </li>
-              </div>
+    padding-bottom:  20px;">
+    <div class="row"><h1>О проекте</h1></div>
+
+      <div class="col-md-12" style="text-align: left">
+          <p>Сайт представляет собой базу данных преподавателей "ГрГМУ". Здесь можно писать, а также читать отзывы других студентов о преподавателе в категориях "Занятие", "Лекция", "Экзамен".</p>
+          <p>Можно оценить преподавателя по параметрам "Коммуникабельность", "Обучение", "Требовательность".</p>
+
+        <ul style="list-style-type: none; padding-left: 0;">Особенности:
+        <li>✍ Отзывы и комментарии к преподавателю. Нет необходимости спрашивать в беседах "как принимает?", "как ведет?", "отмечает?" и пр.</li>
+          <li>👍 Оценки основных параметров. Можно быстро узнать мнение большого количества людей, о том, что из себя представляет преподаватель.</li>
+          <li>❗ Весь список преподавателей разделен на кафедры. Вся информация взята с сайта ГрГМУ.</li>
+          <li>🔒 Отзывы доступны только после регистрации и подтверждения аккаунта через MOODLE. Сделано это для того, чтобы удостовериться, что пользователь является студентом ГрГМУ и не подставлять ни авторов, ни преподавателей.</li>
+        </ul>
       </div>
-
-  <div class="col-md-6">
-    <ul>
-      <li>1Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-      <li>2Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-      <li>3Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-      <li>4Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-    </ul>
-  </div>
-
-  <div class="col-md-6">
-    <ul>
-      <li>5Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-      <li>6Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-      <li>7Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-      <li>8Вот так вот вот так вот тако в таокк твакот аакот ватоакок катков таока в вы ыа ка к</li>
-    </ul>
-  </div>
-  </div>
   </div>
 </div>
+
+  <div class="row">
+      <div class="container" style="margin-top: 50px; text-align: center; max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom:  20px;">
+      <h1>Зарегистрироваться/Войти в аккаунт</h1>
+      <a href="/user/register" class="btn btn-primary">РЕГИСТРАЦИЯ</a>
+      <a href="/user/login" class="btn btn-primary">ВОЙТИ</a>
+      </div>
+  </div>
+
 
 
 <div class="row">
