--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_index.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_index.css
@@ -156,3 +156,21 @@ span.navbar-toggler-icon {
 .navbar-toggler:focus {
     box-shadow: 0 0 0 0.25rem;
 }
+
+
+
+body {
+        background-color: #edeff2;
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: left;
+        background-repeat: no-repeat;
+
+@media screen and (max-width: 600px) {
+body{
+        background-color: #edeff2;
+        background-size:cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+   }
+}
