--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -26,6 +26,7 @@
                     <div class="teacher-position">{{ teacher.position }}</div>
                 </div>
             </div>
+            </div>
             </a>
         </div>
         {% endfor %}
