--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_detail.html
@@ -52,6 +52,7 @@
 })
 </script>
 
+
 <!--FILTRATION_SCRIPT-->
     <script type="text/javascript">
       function handleSelect(elm)
@@ -59,6 +60,7 @@
          window.location = elm.value;
       }
     </script>
+
 
 
 <div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px">
@@ -86,15 +88,15 @@
                <hr>
                <div class="col-md-4" style="text-align: center; max-width: 33%;"> <p>Коммуникабельность</p>
                    <p><div class="pie" style="--p:{{ teacher.communication_average }};--c:#0d6efd;--b:8px"> {{ teacher.communication_average }}</div></p>
-                   <div class="tooltip-box"><i class="fa fa-question-circle" aria-hidden="true"></i><p class="tooltiptext11" id="tooltiptext-1">Метод ajax запускается функцией keyup. Он принимает на вход объект с параметрами запроса. После успешного завершения запросов запускается одна из колбэк-функций success или error. При успешном вызове мы используем условный оператор для добавления и удаления классов is-valid/is-invalid поля ввода. А return false в конце скрипта предотвращает отправку форм, таким образом останавливая перезагрузку страницы.</p></div>
+                    1-плохая, 10-отличная
                </div>
                <div class="col-md-4" style="text-align: center; max-width: 33%;"> <p>Обучение</p>
                    <p><div class="pie" style="--p:{{ teacher.teaching_average }};--c:#0d6efd;--b:8px"> {{ teacher.teaching_average }}</div></p>
-                   <div class="tooltip-box"><i class="fa fa-question-circle" aria-hidden="true"></i><p class="tooltiptext11" id="tooltiptext-2">Метод ajax запускается функцией keyup. Он принимает на вход объект с параметрами запроса. После успешного завершения запросов запускается одна из колбэк-функций success или error. При успешном вызове мы используем условный оператор для добавления и удаления классов is-valid/is-invalid поля ввода. А return false в конце скрипта предотвращает отправку форм, таким образом останавливая перезагрузку страницы.</p></div>
+                    1-плохое, 10-отличное
                </div>
                <div class="col-md-4" style="text-align: center; max-width: 33%;"> <p>Требовательность</p>
                    <p><div class="pie" style="--p:{{ teacher.demanding_average }};--c:#0d6efd;--b:8px"> {{ teacher.demanding_average }}</div></p>
-                   <div class="tooltip-box"><i class="fa fa-question-circle" aria-hidden="true"></i><p class="tooltiptext11" id="tooltiptext-3">Метод ajax запускается функцией keyup. Он принимает на вход объект с параметрами запроса. После успешного завершения запросов запускается одна из колбэк-функций success или error. При успешном вызове мы используем условный оператор для добавления и удаления классов is-valid/is-invalid поля ввода. А return false в конце скрипта предотвращает отправку форм, таким образом останавливая перезагрузку страницы.</p></div>
+                    1-высокая, 10-низкая
                </div>
            <small style="text-align: center;">Количество голосов: {{ vote_count }}</small>
            </div>
@@ -116,31 +118,13 @@
         <a class="btn btn-secondary" data-toggle="collapse" href="#collapse{{teacher.pk}}" role="button" aria-expanded="false" aria-controls="collapse{{teacher.pk}}">Оценка</a>
         <button type="submit" name="comment_left" class="btn btn-primary">Отправить</button>
     </form>
+
 <!--VOTING-->
-    <div class = "collapse" id = "collapse{{ teacher.pk }}">
-        <div class="vote-card shadow">
-            <h6>Оценить: {{ teacher.name }}</h6>
-            <hr>
-            <form method="post">
-                {% csrf_token %}
-                {% for field in vote_form %}
-                    <div class="row">
-                        <div class="col-10" id="slider_{{field.name}}_{{teacher.pk}}" onchange="sliderUpdate('{{field.name}}', {{teacher.pk}})">
-                            {{field.label}}
-                            <p>{{field}}</p>
-                        </div>
-                        <div class="col-2 my-auto">
-                            <h6 class="text-center"><span id="score_{{field.name}}_{{teacher.pk}}" class="text-primary">6</span></h6>
-                        </div>
-                    </div>
-                {% endfor %}
-                <div class="text-right">
-                    <button type="submit" name="score_submit" class="btn btn-secondary">Оценить</button>
-                </div>
-            </form>
-        </div>
+    <div id="vote-section">
+    {% include 'demo_site/vote_section.html' %}
     </div>
 <!--END VOTING-->
+
     {% else %}
     <div class="card">
         <div class="card-header">
@@ -159,11 +143,5 @@
 
 </div>
 
-
-<script>
-    function sliderUpdate(field, pk) {
-        document.getElementById("score_" + field + "_" + pk).innerText = document.getElementById("slider_" + field + "_" + pk).getElementsByClassName(field)[0].value;
-        }
-</script>
 
 {% endblock %}
