--- a/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
+++ b/grsmu_diplom/grsmu_diplom/templates/grsmu_diplom/main_page.html
@@ -29,6 +29,32 @@
   font-family: 'Libre Baskerville', serif;">GRSMU_CHECK</b>
 </div>
 </div>
+    {% if user.is_authenticated %}
+    {% with count=user.notifications.unread.count  %}
+    {% if count %}
+    <div class="row">
+      <div class="container" style="margin-top: 50px; text-align: center; max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom:  20px;">
+      <h1>Уведомления</h1>
+
+          <div class="notifications_count" style="position: absolute; top: -10px; left: -10px; padding: 3px 12px; border-radius: 50%; background: red; color: white;">
+          {{ count }}
+          </div>
+
+            {% for notification in user.notifications.unread %}
+            <p><b>{{ notification.verb }}</b><p>
+            <p>{{ notification.description }}</p>
+          <hr>
+            {% endfor %}
+          <form method="post">
+              {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Удалить все</button>
+          </form>
+
+      </div>
+  </div>
+    {% endif %}
+    {% endwith %}
+        {% endif %}
 
 
 <div class="row">
@@ -56,7 +82,8 @@
   </div>
 </div>
 
-  <div class="row">
+
+    <div class="row">
       <div class="container" style="margin-top: 50px; text-align: center; max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom:  20px;">
       <h1>Зарегистрироваться/Войти в аккаунт</h1>
       <a href="/user/register" class="btn btn-primary">РЕГИСТРАЦИЯ</a>
