--- a/grsmu_diplom/static/css/styles/grsmu_diplom/main_page.css
+++ b/grsmu_diplom/static/css/styles/grsmu_diplom/main_page.css
@@ -190,28 +190,27 @@
   display: none;
 }
 
-
-
 body {
         background-color: #edeff2;
         font-family: "Calibri", "Roboto", sans-serif;
+        height: 100vh;
         background-size: cover;
+        background-position: center center;
         background-attachment: fixed;
-        background-position: left;
-        background-repeat: no-repeat;
-
-@media screen and (min-width: 600px) {
-body{
+        left: 0;
+        right: 0;
+        bottom: 0
+    }
+    
+@media screen and (max-width: 600px)
+body {
         background-color: #edeff2;
         font-family: "Calibri", "Roboto", sans-serif;
-        background-size: cover;
-        background-attachment: fixed;
+        height: 100vh;
+        background-size:cover;
         background-position: left;
         background-repeat: no-repeat;
    }
-}
-
-
 
 
 
