--- a/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
+++ b/grsmu_diplom/demo_site/templates/demo_site/demo_site_department.html
@@ -1,31 +1,35 @@
 {% extends "base.html" %}
 {% block page_content %}
 {% load static %}
+<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5883857021799883"
+     crossorigin="anonymous"></script></head>
 
 <div class="col-md-8 offset-md-2">
-    <h1>{{ department | title }}</h1>
-    <hr>
 </div>
 
 
 <div class="container" style="max-width: 1200px; background-color: rgb(255 255 255 / 75%); backdrop-filter: blur(100px); padding-top: 20px; border-radius: 30px; padding-bottom: 1px;">
+    <h1>{{ department | title }}</h1>
+    <hr>
     <div class="row">
        {% for teacher in teachers %}
         <div class="col-md-3">
             <a href="{% url 'demo_site_detail' teacher.pk %}">
             <div class="teacher-card" style = "min-height: 300px;">
-                <div class="test"></div>
-                    {% if teacher.teacher_img %}
-                <div class="teacher-card-body" style = "max-height: 300px; background-image: url({{ teacher.teacher_img.url }});">
+                {% if teacher.teacher_img %}
+                    <div class="teacher-card-body" style = "max-height: 300px; background-image: url({{ teacher.teacher_img.url }});">
                     <img class = "img img-responsive" src="{{ teacher.teacher_img.url }}" alt="Teacher Picture" >
-                    {% else %}
-                <div class="teacher-card-body" style = "max-height: 300px; background-image: url{% static '/images/teacher.jpg' %}">
+                {% else %}
+                    <div class="teacher-card-body" style = "max-height: 300px; background-image: url{% static '/images/teacher.jpg' %}">
                     <img class = "img img-responsive" src="{% static 'images/teacher.jpg' %}" alt="Teacher Picture" >
-                    {% endif %}
-                    <div class="teacher-name">{{ teacher.name|title }}</div>
-                    <div class="teacher-position">{{ teacher.position }}</div>
-                </div>
-            </div>
+                {% endif %}
+                    </div>
+
+                    <div class="teacher-name">
+                    <p style="margin-bottom: 0px;">{{ teacher.name|title }}</p>
+                    <p style="font-size: 13px; ">{{ teacher.position }}</p>
+                    </div>
+
             </div>
             </a>
         </div>
