--- a/grsmu_diplom/static/css/styles/demo_site/demo_site_index.css
+++ b/grsmu_diplom/static/css/styles/demo_site/demo_site_index.css
@@ -3,10 +3,9 @@
     padding: 6rem 1rem;
     background-size: cover;
     background-attachment: fixed;
-    background-position: left;
+    background-position: center center;
     background-repeat: no-repeat;
-    height: 100%;
-    width: 100%;
+
 }
 
 .vote-card {
@@ -162,7 +161,6 @@ span.navbar-toggler-icon {
 .navbar-toggler:focus {
     box-shadow: 0 0 0 0.25rem;
 }
-
 
 
 body {
